tests/type_errors/easy/basic.py
x: int = 5
y: int = 10
z: bool = x + y
